--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@ entitymanager.packagesToScan=com.coolwen.experimentplatformv2
 spring.datasource.url=jdbc:mysql://localhost:3306/experimentplatformv2?serverTimezone=UTC&characterEncoding=utf-8
 #spring.datasource.url=jdbc:mysql://172.17.55.112:3306/experimentplatformv2?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false
 # 用户名
-#spring.datasource.username=experiment
-spring.datasource.username=root
+spring.datasource.username=experiment
+#spring.datasource.username=root
 # 密码
-#spring.datasource.password=experiment@Platform20200506
+spring.datasource.password=experiment@Platform20200506
 #spring.datasource.password=zhangcc
-spring.datasource.password=123456
+#spring.datasource.password=123456
 #spring.datasource.password=13882238627
 # 数据库驱动
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -56,20 +56,22 @@ spring.thymeleaf.cache=false
 #win10
 web.ExpModelImage-path=E:/ExperimentPlatform/ExpModelImage/
 web.ExpData-path=E:/ExperimentPlatform/EepData/
+web.template-path=E:/ExperimentPlatform/template/
 web.upload-path=/src/main/resources/static/uploadFile/
 web.count-path=E:/count.txt
 ue.local.physical-path=E:/upload/
 
 
 # cas服务器地址
-shiro.cas=http://tysf.sctu.edu.cn:8071/sso/
+#shiro.cas=http://tysf.sctu.edu.cn:8071/sso/
 #  server: http://172.16.10.45:8888
 #项目地址
-shiro.server=http://172.17.55.112:8889
+#shiro.server=http://172.17.55.112:8889
 
 #Linux
 #web.ExpModelImage-path=/opt/ExperimentPlatform/ExpModelImage/
 #web.ExpData-path=/opt/ExperimentPlatform/EepData/
+#web.template-path=/opt/ExperimentPlatform/template/
 #web.upload-path=/opt/src/main/resources/static/uploadFile/
 #web.count-path=/opt/count.txt
 #ue.local.physical-path=/opt/src/main/resources/static/upload/
