--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.jpa.properties.hibernate.show_sql=true
 SimplePageBuilder.pageSize=10
 #解决no-session
 spring.jpa.open-in-view=true
-server.port=8889
+server.port=8888
 #打印日志级别设置
 #logging.level.com.coolwen.experimentplatformv2.controller=DEBUG
 #logging.level.com.coolwen.experimentplatformv2.service=DEBUG
@@ -54,12 +54,13 @@ spring.thymeleaf.cache=false
 
 
 #win10
-web.ExpModelImage-path=E:/ExperimentPlatform/ExpModelImage/
-web.ExpData-path=E:/ExperimentPlatform/EepData/
-web.template-path=E:/ExperimentPlatform/template/
+web.ExpModelImage-path=C:/ExperimentPlatform/ExpModelImage/
+web.ExpData-path=C:/ExperimentPlatform/EepData/
+web.template-path=C:/ExperimentPlatform/template/
 web.upload-path=/src/main/resources/static/uploadFile/
-web.count-path=E:/count.txt
-ue.local.physical-path=E:/upload/
+web.count-path=C:/count.txt
+web.pdf-rootPath=E:/
+ue.local.physical-path=C:/upload/
 
 
 # cas服务器地址
@@ -74,6 +75,7 @@ ue.local.physical-path=E:/upload/
 #web.template-path=/opt/ExperimentPlatform/template/
 #web.upload-path=/opt/src/main/resources/static/uploadFile/
 #web.count-path=/opt/count.txt
+#web.pdf-rootPath=/opt/
 #ue.local.physical-path=/opt/src/main/resources/static/upload/
 
 
