--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ server.port=8888
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-
+server.servlet.session.timeout=1200s
 #web.ExpModelImage-path=../ExperimentPlatform/ExpModelImage/
 #web.ExpData-path=../ExperimentPlatform/EepData/
 ue.config-file=static/ueditor/jsp/config.json
